# cohort-project

./: cohort_store.py  cohorts.duckdb  demo_queries.py  etl_example.py  etl_wrappers.py  filtered_liver_metrics.parquet  ingest.py  out_filtered_liver_metrics.csv  out_filtered_liver_metrics.parquet  pyproject.toml  query_examples.py
cohortstore/: __init__.py  store.py
cohortstore.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: Merged_master_file.csv
